src/components/header/header.css
header {
  height: 100vh;
  padding-top: 5vh;
  overflow: hidden;
}

.header__container {
  text-align: center;
  height: 100%;
  position: relative;
}

/* CTA */

.cta {
  margin-top: 2.5rem;
  display: flex;
  gap: 1.2rem;
  justify-content: center;
}

/* header socials */

.header__socials {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.8rem;
  position: absolute;
  left: 0;
  bottom: 3rem;
}

.header__socials::after {
  content: "";
  width: 1px;
  height: 2rem;
  background: var(--color-primary);
}

/* me */
.me {
  background: linear-gradient(var(--color-primary), transparent);
  width: 40vh;
  height: 40vh;
  position: absolute;
  left: calc(50% - 20vh);
  margin-top: 4rem;
  border-radius: 50%;
  overflow: hidden;
  padding: 2.5vh 2.5vh 2.5vh 2.5vh;
}

.avatar {
  vertical-align: auto;
  width: 35vh;
  height: 35vh;
  border-radius: 50%;
}

/* scroll down */

.scroll__down {
  position: absolute;
  right: -2.3rem;
  bottom: 5rem;
  transform: rotate(90deg);
  font-weight: 300;
  font-size: 0.9rem;
}

/* Media Queries (medium devices) */

@media (max-width: 1024px) {
}

/* Media Queries (small devices) */

@media (max-width: 600px) {
  .header__socials,
  .scroll__down {
    display: none;
  }
}

@media (max-width: 390px) {
  .me {
    width: 30vh;
    height: 30vh;
    left: calc(50% - 15vh);
    padding: 1.875vh 1.875vh 1.875vh 1.875vh ;
  }

  .avatar {
    vertical-align: auto;
    width: 26.25vh;
    height: 26.25vh;
    border-radius: 50%;
  }
}

